--- a/app/Resources/views/test1/index.html.twig
+++ b/app/Resources/views/test1/index.html.twig
@@ -3,7 +3,7 @@
        <div class="container-fluid" id="indo">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12">
-<h2 class="page-header"> Welcome to Events in Vienna </h2>
+<h2 class="page-header"> Events you can visit in Vienna </h2>
 </div>
 </div>
 <div class="row">
