--- a/app/Resources/views/test1/details.html.twig
+++ b/app/Resources/views/test1/details.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% block title %}Welcome to Big Events{% endblock %}
 {% block body %}
        <a class="btn btn-default" href="/">Back</a>
        <hr>
@@ -17,7 +18,18 @@
        </ul>
      <div class="main1">
 
-   <img src="{{test1.image}}" />
+   <div class="image">
+
+       {{test1.image}}
+     </div>
+
+  
+   
 
 </div>
+
+{% endblock %}
+{% block stylesheets %}
+<link rel="stylesheet" type="text/css" href="../css/style.css">
+  
 {% endblock %}
